--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,11 +23,6 @@ body {
   text-decoration: underline;
 }
 
-.active {
-  text-decoration: underline;
-
-}
-
 .topnav .icon {
   display: none;
 }
@@ -96,8 +91,25 @@ z-index:100000;
 }
 
 .popupthree:hover{
+  z-index:100000;
+}
+
+.popupfour{
+  border: 10px solid #000000;
+  position: absolute;
+  width: 900px;
+  height:580px;
+  top:80px;
+  right: 400px;
+  background-color: white;
+  font-size: 20px;
+  text-align:center;
+}
+
+.popupfour:hover{
 z-index:100000;
 }
+
 
 .popupshop{
   border: 10px solid #000000;
@@ -107,7 +119,6 @@ z-index:100000;
   top:100px;
   left:200px;
   background-color: white;
-
 }
 
 .preview{
