--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,7 +100,7 @@ z-index:100000;
   width: 900px;
   height:580px;
   top:80px;
-  right: 400px;
+  right: 300px;
   background-color: white;
   font-size: 20px;
   text-align:center;
@@ -110,6 +110,35 @@ z-index:100000;
 z-index:100000;
 }
 
+.popupfive{
+    border: 10px solid #000000;
+    position: absolute;
+    width: 319.4px;
+    height:260px;
+    top:480px;
+    left:100px;
+    background-color: #393939;
+    text-align:center;
+}
+
+.popupfive:hover{
+z-index:100000;
+background-color:  #C8C8C8;
+}
+
+.popupsix{
+    border: 10px solid #000000;
+    position: absolute;
+    width: 400px;
+    height:446px;
+    top:370px;
+    right:180px;
+    background-color: white;
+}
+
+.popupsix:hover{
+  z-index:100000;
+}
 
 .popupshop{
   border: 10px solid #000000;
@@ -152,6 +181,18 @@ z-index:100000;
   background-color: #C8C8C8
 }
 
+.price{
+  color:white;
+  font-size: 68px;
+  text-align: center;
+  line-height: 80pt;
+  transition: background-color 0.25s linear;
+  text-decoration-line: none;}
+
+.price:hover{
+  color:black;
+}
+
 .shop{
   position: relative;
   padding-bottom: 56.25%;
@@ -190,3 +231,42 @@ z-index:-10000;
   width: 15%;
 }
 
+.container {
+  position: relative;
+  width: 50%;
+}
+
+.image {
+  display: block;
+  width: 400px;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 400px;
+  height: auto;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: black;
+}
+
+.container:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
